<?xml version="1.0"?>
<package format="3">
  <name>opencv_package</name>
  <version>0.1.0</version>
  <description>ROS 2 package for subscribing to an image topic and processing it.</description>
  
  <!-- Maintain your own licenses and dependencies -->
  <license>MIT</license>
  <author email="your.email@example.com">Your Name</author>
  <maintainer email="your.email@example.com">Your Name</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>opeimage_transportncv</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Declare the node type(s) -->
    <build_type>ament_cmake</build_type>
    <rclcpp_components package="opencv_package" node_class="OpencvNode" plugin="opencv_package::OpencvNode"/>
  </export>
</package>
